bug fix overflow on section

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ figure {
 }
 section {
   padding: 70px 0;
+  overflow: hidden;
 }
 
 .section-dark {
